# elsamultiskillagent

mech_driver/: Cargo.toml
mech_driver/src/: ballistics.rs  main.rs  reactor.rs
neural_cortex/: main.py
neural_cortex/core/: tactical_net.py
neural_cortex/interface/: hologram.py
neural_cortex/modules/: quantum_scheduler.py
src/components/: ChatWindow.tsx  Footer.tsx  InteractiveBackground.tsx  Navbar.tsx  TerminalSplash.tsx
