[package]
name = "mech_driver"
version = "2.0.4-mecha"
edition = "2021"
authors = ["System Administrator <admin@mech-core.internal>"]
description = "Low-latency hardware interface layer for MK-IV Exoskeleton"
publish = false

# --- BUILD PROFILES ---

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true

# --- DEPENDENCIES ---

[dependencies]
# Asynchronous Runtime & Threading
tokio = { version = "1.32", features = ["full", "tracing"] }
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"  # Low-latency locking primitives
rayon = "1.8"         # Parallel data processing

# System & Hardware Access
nix = { version = "0.27", features = ["fs", "mman", "signal", "ioctl"] }
libc = "0.2"
bytes = "1.5"
memmap2 = "0.9"       # Direct memory mapping for sensor buffers

# Serialization & Communication
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"       # Binary serialization for inter-process comms
prost = "0.12"        # Protocol Buffers implementation

# Telemetry & Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptography (Security Layer)
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hmac = "0.12"

# Linear Algebra & Physics Engine
nalgebra = { version = "0.32", features = ["serde-serialize"] }

[features]
default = ["simulated-hardware"]
simulated-hardware = []
production-hardware = []
unsafe-overclock = []

[[bin]]
name = "mech_driver"
path = "src/main.rs"

[lib]
name = "mech_core"
path = "src/lib.rs"
